# Python-Eventsourcing-CQRS

./: .gitignore  README.md  docker-compose.dev.yml  main.py  pyproject.toml
adapter/: mongo.py
config/: mongodb.py  otel.py
docker/: local.Dockerfile  production.Dockerfile  web_entrypoint.sh
internal/domain/aggregates/: inventory.py
internal/domain/commands/: commands.py
internal/domain/entities/: inventory.py
internal/domain/entities/types/: inventory.py
internal/domain/events/: base.py  inventory.py
internal/domain/events/v1/: inventory.py
internal/domain/exceptions/: inventory.py
internal/domain/interfaces/: ies_utility.py  iuow.py  iuse_case.py
internal/domain/interfaces/repositories/: iinventory.py  iinventory_projection.py
internal/domain/queries/: queries.py
internal/es/services/: inventory_utility.py
internal/modules/: main.py
internal/modules/invenotry/: dependencies.py
internal/modules/invenotry/aggregates/: inventory.py
internal/modules/invenotry/commands/: inventory.py
internal/modules/invenotry/delivery/: apis.py
pkg/mongodb/: mongodb.py
src/: main.py
src/domain/: models.py
src/infrastructure/: alembic.ini  db_session.py  store_info_respository.py
src/infrastructure/alembic/: env.py
src/infrastructure/models/: store.py
src/infrastructure/repositories/: store.py  store_info.py
src/infrastructure/services/: minio.py
src/infrastructure/settings/: .env  database.py  minio_settings.py  settings.py
src/presentation/: apis.py  schema.py  store.py
src/services/: store.py
(+14 files in other folders)
