[tool.poetry]
name = "invenotry"
version = "0.1.0"
description = ""
authors = ["aliseylaneh <aliseylaneh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
setuptools = "^69.5.1"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
psycopg = { extras = ["binary"], version = "^3.1.19" }
python-multipart = "^0.0.9"
minio = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
